src/assets/basic.css
h1 {
	margin-bottom: .5em;
	font-size: 225%;
	line-height: 1.125;
}
h1 + p:not(:last-child) {
	margin-top: -1em;
	margin-bottom: 1.125em;
}
header p:last-child {
	margin-bottom: 2em;
}
h2 {
	margin-top: 2em;
}
i::after {
	content: " — ";
	white-space: pre;
}
i,
address {
	font-style: inherit;
}
img {
	display: block;
	max-width: 100%;
	margin: 0 auto;
}
sub {
	font-size: .5em;
}
footer.metadata {
	margin-top: 7em;
}
.posts li {
	margin-bottom: 1.5em;
	padding-bottom: .75em;
	border-bottom: 1px dashed #404144;
}
.posts h3 + p {
	margin: -.75em 0 -.25em;
}
#comments ~ article h3 {
	margin-top: 2em;
	padding: .125em .25em;
	font-size: 75%;
}
#comments ~ section {
	margin-top: 1.5em;
	border-top: 1px solid #e0e2e5;
}
blockquote {
	font-style: italic;
}
pre,
figure,
blockquote {
	margin-right: 0;
	margin-left: 0;
	padding: .875em 1em;
}
pre,
figure,
blockquote,
#comments ~ article h3 {
	border: 1px solid #e0e2e5;
}
header p:last-child,
.posts li p:last-child,
img + small,
figure,
blockquote,
#comments ~ p,
#comments ~ section,
nav,
footer {
	font-family: sans-serif;
}
header p:last-child,
.posts li p:last-child,
img + small,
figcaption,
nav,
footer {
	font-size: 87.5%;
}
figcaption {
	margin-top: .5em;
}
nav {
	margin-top: 4em;
	padding-top: 4em;
	border-top: 2px solid;
}
footer h3 {
	font-size: 85.7143%;
	margin-top: 1.5em;
}
nav ul {
	display: block;
	list-style: none;
	padding-left: 0;
}
nav li {
	display: inline;
}
nav li + li::before {
	content: " ";
}
nav li:nth-child(5)::before {
	content: "\0a\0a";
	white-space: pre;
}
body > footer p > span {
	display: block;

}
[data-hl="Home"] {
	display: block;
}
[data-hl="Home"]::before {
	content: "ence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com cssence.com css";
	overflow: hidden;
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	color: #e0e2e5;
	font-family: sans-serif;
	font-size: 71.42857%;
	font-weight: 700;
	letter-spacing: 1em;
	line-height: 1;
	white-space: nowrap;
}
[data-hl="Home"] svg,
header p:last-child br,
.posts li p:last-child br,
.posts li img {
	display: none;
}
header img,
main .visually-hidden {
	overflow: hidden;
	position: absolute;
	z-index: 1;
	width: 1px;
	height: 1px;
	margin: -1px;
	clip: rect(0,0,0,0);
	border: 0;
	white-space: nowrap;
}
@media screen {
	body {
		overflow-x: hidden;
		overflow-y: scroll;
		max-width: 40em;
		margin: 0 auto;
		padding: 2.5em 1.5em;
		color: #111;
		line-height: 1.5;
	}
	pre {
		overflow: auto;
		tab-size: 2;
	}
	pre,
	figure,
	blockquote,
	#comments ~ article h3 {
		background-color: #e0e2e5;
	}
}
@media screen and (max-width: 25em) {
	body {
		font-size: 4vw;
	}
}
@media print {
	body {
		margin: 0;
		padding: 0;
		font-size: 12pt;
	}
	.posts li a::before {
		content: "https://cssence.com" attr(href);
		display: block;
		margin-bottom: .5em;
		font-size: .875rem;
		font-family: sans-serif;
		font-weight: 400;
	}
	header p:last-child {
		position: absolute;
		top: 0;
		right: 0;
		left: 0;
		margin: 0;
		border-bottom: 1px solid;
	}
	header p:last-child::before {
		position: absolute;
		content: "cssence.com";
		left: 50%;
		width: 80mm;
		margin-left: -40mm;
		font-weight: 700;
		text-align: center;
	}
	header time {
		float: right;
	}
	h1 {
		margin-top: 20mm;
	}
	a {
		color: inherit !important;
		text-decoration: none;
	}
	pre {
		tab-size: 4;
		white-space: pre-wrap;
	}
	code {
		font-size: .875em;
		letter-spacing: -.02em;
	}
	footer.metadata h2 {
		margin: 0;
		border-top: 1px solid;
		font-size: inherit;
	}
	footer.metadata p {
		margin: 0;
	}
	header i::after,
	#comments ~ section,
	aside[aria-labelledby="showcase"],
	nav,
	body > footer {
		display: none;
	}
}

